feat: add CRUD paths for tramites resource
