# internal/catalog/oapi/openapi.yml
@@ -33,13 +33,15 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/HealthResponse"
+        "404":
+          $ref: "#/components/responses/NotFound"
 
   /catalog/tramites:
     get:
-      operationId: getTramites
+      operationId: ListTramites
       summary: Listar Trámites
       description: |
-        Retrieves a paginated list of trámites.
+        Obtiene una lista de trámites paginados
         - **Guests** will only see `published` items.
         - **Creators** will see their own drafts/archived items alongside published ones.
         - **Admins** will see everything.
@@ -69,74 +71,101 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                required:
-                  - data
-                  - page
-                  - limit
-                  - total
-                properties:
-                  data:
-                    type: array
-                    items:
-                      $ref: "#/components/schemas/TramiteResponse"
-                  page:
-                    type: integer
-                  limit:
-                    type: integer
-                  total:
-                    type: integer
+                $ref: "#/components/schemas/TramiteCollection"
         "401":
           $ref: "#/components/responses/Unauthorized"
     post:
-      operationId: postTramite
-      summary: Crear trámite nuevo
+      operationId: createTramite
+      summary: Crear Trámite
       description: Permite a usuarios con rol de administración la creación de nuevos trámites en el catálogo de trámites. Los mismos nacerán con estado draft y pueden contener un procedimiento vacío
       security:
         - BearerAuth: []
       requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-                - name
-                - type
-              properties:
-                name:
-                  type: string
-                  example: "Inscripción de Personería Jurídica"
-                description:
-                  type: string
-                procedureDescription:
-                  type: string
-                type:
-                  type: string
-                  example: "De Registro"
-                status:
-                  $ref: "#/components/schemas/TramiteStatus"
-                  default: draft
-                legalFramework:
-                  type: array
-                  items:
-                    type: string
-                  example: ["Ley N° 351, Artículo 5"]
+        $ref: "#/components/requestBodies/TramiteCreateBody"
       responses:
         "201":
           description: Creación de Trámite exitosa
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/TramiteResponse"
+                $ref: "#/components/schemas/Tramite"
         "400":
           $ref: "#/components/responses/BadRequest"
         "401":
           $ref: "#/components/responses/Unauthorized"
         "403":
-          description: "El usuario no tiene los permisos suficientes"
+          $ref: "#/components/responses/Forbidden"
         "422":
-          description: "Hay un error en los datos recibidos"
+          $ref: "#/components/responses/ValidationError"
+
+  /catalog/tramites/{id}:
+    parameters:
+      - name: id
+        in: path
+        required: true
+        description: ID del Trámite
+        schema:
+          type: integer
+    get:
+      operationId: getTramite
+      summary: Obtener Trámite
+      security:
+        - BearerAuth: []
+        - {}
+      responses:
+        "200":
+          description: Detalles del Trámite
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Tramite"
+        "403":
+          $ref: "#/components/responses/Forbidden"
+        "404":
+          $ref: "#/components/responses/NotFound"
+
+      deprecated: false
+    patch:
+      operationId: updateTramite
+      summary: Modificar Trámite
+      security:
+        - BearerAuth: []
+      requestBody:
+        $ref: "#/components/requestBodies/TramiteUpdateBody"
+      responses:
+        "200":
+          description: Trámite actualizado exitosamente
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Tramite"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "403":
+          $ref: "#/components/responses/Forbidden"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "422":
+          $ref: "#/components/responses/ValidationError"
+
+    delete:
+      operationId: deleteTramite
+      summary: Eliminar Trámite
+      security:
+        - BearerAuth: []
+      responses:
+        "204":
+          description: Trámite eliminado, nada que retornar
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "403":
+          $ref: "#/components/responses/Forbidden"
+        "404":
+          $ref: "#/components/responses/NotFound"
+      deprecated: false
+
 components:
   securitySchemes:
     BearerAuth:
@@ -145,12 +174,28 @@ components:
       bearerFormat: JWT
       description: Enter your application JWT token
   schemas:
+    CollectionBase:
+      type: object
+      required:
+        - data
+        - next_page_url
+        - previous_page_url
+      properties:
+        next_page_url:
+          type: string
+          nullable: true
+          example: "https://api.example.com/users?page=3"
+        previous_page_url:
+          type: string
+          nullable: true
+          example: "https://api.example.com/users?page=1"
+
     TramiteStatus:
       type: string
       enum: [draft, published, archived]
       example: draft
 
-    TramiteResponse:
+    Tramite:
       type: object
       required:
         - id
@@ -189,6 +234,66 @@ components:
           type: string
           format: date-time
           example: "2026-04-02T11:15:22Z"
+
+    TramiteCollection:
+      allOf:
+        - $ref: "#/components/schemas/CollectionBase"
+        - type: object
+          required:
+            - data
+          properties:
+            data:
+              type: array
+              items:
+                $ref: "#/components/schemas/Tramite"
+
+    TramiteCreate:
+      type: object
+      required:
+        - name
+        - type
+      properties:
+        name:
+          type: string
+          example: "Inscripción de Personería Jurídica"
+        description:
+          type: string
+        procedureDescription:
+          type: string
+        type:
+          type: string
+          example: "Administrativo"
+        status:
+          $ref: "#/components/schemas/TramiteStatus"
+          default: draft
+        legalFramework:
+          type: array
+          items:
+            type: string
+          example: ["Ley N° 351, Artículo 5"]
+
+    TramiteUpdate:
+      type: object
+      properties:
+        name:
+          type: string
+          example: "Inscripción de Personería Jurídica"
+        description:
+          type: string
+        procedureDescription:
+          type: string
+        type:
+          type: string
+          example: "Administrativo"
+        status:
+          $ref: "#/components/schemas/TramiteStatus"
+          default: draft
+        legalFramework:
+          type: array
+          items:
+            type: string
+          example: ["Ley N° 351, Artículo 5"]
+
     HealthResponse:
       type: object
       required:
@@ -205,8 +310,125 @@ components:
           type: string
           format: date-time
           example: "2026-06-06T15:30:00Z"
+
+    ProblemDetails:
+      type: object
+      description: >
+        Objeto de Detalles de Problema según RFC 9457.
+        Se serializa con el tipo de medio "application/problem+json".
+        Todos los miembros son OPCIONALES; los miembros ausentes no tienen
+        valor por defecto salvo donde se indique explícitamente.
+        Pueden estar presentes miembros adicionales (de extensión); los consumidores
+        DEBEN ignorar los miembros cuyo tipo de valor no coincida con el tipo especificado.
+      properties:
+        type:
+          type: string
+          format: uri-reference
+          default: "about:blank"
+          description: >
+            Referencia URI (RFC 3986) que identifica el tipo de problema.
+            Al ser desreferenciada (si es una URI http/https), DEBERÍA ofrecer
+            documentación legible por humanos sobre el tipo de problema.
+            Si está ausente, se asume el valor "about:blank", que remite al
+            código de estado HTTP como único identificador del tipo de problema.
+            En el caso de Tunkunia se usan rutas relativas a modo de identificador
+            y eventual creación de sitio de documentación de problemas específicos
+          example: "/problems/invalid-citizen"
+        status:
+          type: integer
+          format: int32
+          minimum: 400
+          maximum: 599
+          description: >
+            Código de estado HTTP generado por el servidor de origen para esta
+            ocurrencia del problema. Se incluye por conveniencia; DEBE coincidir
+            con el código de estado de la respuesta HTTP real.
+          example: 403
+        title:
+          type: string
+          description: >
+            Contiene un resumen corto y legible por humanos del tipo de problema.
+            Es de carácter consultivo y se incluye únicamente para los usuarios que no conocen y no pueden descubrir la semántica del URI del campo "type".
+          example: "Usted no es participante de este caso de trámite."
+        detail:
+          type: string
+          description: >
+            Contiene una explicación legible para humanos, específica de esta ocurrencia del problema.
+            Si está presente, debería centrarse en ayudar al cliente a corregir el problema, en lugar de proporcionar información de depuración.
+            Los consumidores NO DEBERÍAN analizar (parsear) el miembro "detail" para obtener información; las extensiones son una forma más adecuada y menos propensa a errores de obtener dicha información.
+          example: "Su caso de trámite con código 500424 no se encuentra vigente"
+        instance:
+          type: string
+          format: uri-reference
+          description: >
+            Referencia URI que identifica la ocurrencia específica del problema.
+            Cuando es desreferenciable, el objeto de detalles de problema PUEDE
+            obtenerse desde ella. Puede ser relativa o absoluta.
+            No suele incluirse en la API de Tunkunia y se conserva en el esquema para obedecer el RFC 9457
+          example: "/cuenta/12345/mensajes/abc"
+  requestBodies:
+    TramiteCreateBody:
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/TramiteCreate"
+    TramiteUpdateBody:
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/TramiteUpdate"
   responses:
     BadRequest:
-      description: La solicitud es incorrecta.
+      description: Solicitud no aceptada o entendida. Quizá falte algún parámetro requerido.
+      content:
+        application/problem+json:
+          schema:
+            $ref: "#/components/schemas/ProblemDetails"
+
     Unauthorized:
-      description: Usuario no autenticado.
+      description: No se ha provisto con una llave válida.
+      content:
+        application/problem+json:
+          schema:
+            $ref: "#/components/schemas/ProblemDetails"
+
+    Forbidden:
+      description: No tiene permisos para realizar esta solicitud
+      content:
+        application/problem+json:
+          schema:
+            $ref: "#/components/schemas/ProblemDetails"
+
+    NotFound:
+      description: El recurso solicitado no existe
+      content:
+        application/problem+json:
+          schema:
+            $ref: "#/components/schemas/ProblemDetails"
+
+    ValidationError:
+      description: Los datos provistos son incorrectos
+      content:
+        application/problem+json:
+          schema:
+            allOf:
+              - $ref: "#/components/schemas/ProblemDetails"
+              - type: object
+                properties:
+                  errors:
+                    description: >
+                      Lista de errores de validación identificados. El formato
+                      se adecúa al ejemplo brindado en la sección 3 del RFC 9457
+                    type: array
+                    items:
+                      type: object
+                      required:
+                        - detail
+                        - pointer
+                      properties:
+                        detail:
+                          type: string
+                        pointer:
+                          type: string
