# internal/catalog/server.go
@@ -12,6 +12,10 @@ type Server struct {
 	service *Service
 }
 
+func NewServer(service *Service) *Server {
+	return &Server{service: service}
+}
+
 // GetHealth implements [oapi.StrictServerInterface].
 func (s *Server) GetHealth(ctx context.Context, request oapi.GetHealthRequestObject) (oapi.GetHealthResponseObject, error) {
 	if s.service == nil {
@@ -26,29 +30,39 @@ func (s *Server) GetHealth(ctx context.Context, request oapi.GetHealthRequestObj
 	}, nil
 }
 
-// PostTramite implements [oapi.StrictServerInterface].
-func (s *Server) PostTramite(ctx context.Context, request oapi.PostTramiteRequestObject) (oapi.PostTramiteResponseObject, error) {
-	panic("unimplemented")
-}
-
-func NewServer(service *Service) *Server {
-	return &Server{service: service}
-}
-
-func (s *Server) GetTramites(ctx context.Context, request oapi.GetTramitesRequestObject) (oapi.GetTramitesResponseObject, error) {
+// ListTramites implements [oapi.StrictServerInterface].
+func (s *Server) ListTramites(ctx context.Context, request oapi.ListTramitesRequestObject) (oapi.ListTramitesResponseObject, error) {
 	tramites := s.service.GetAll()
-	response := make([]oapi.TramiteResponse, len(tramites))
+	response := make([]oapi.Tramite, len(tramites))
 	for i, t := range tramites {
-		response[i] = oapi.TramiteResponse{
+		response[i] = oapi.Tramite{
 			Id:   t.ID,
 			Name: t.Name,
 		}
 	}
-	return oapi.GetTramites200JSONResponse{
-		Data:  response,
-		Total: len(response),
-		Page:  1,
-		Limit: len(response)}, nil
+	return oapi.ListTramites200JSONResponse{
+		Data: response,
+	}, nil
+}
+
+// CreateTramite implements [oapi.StrictServerInterface].
+func (s *Server) CreateTramite(ctx context.Context, request oapi.CreateTramiteRequestObject) (oapi.CreateTramiteResponseObject, error) {
+	panic("unimplemented")
+}
+
+// GetTramite implements [oapi.StrictServerInterface].
+func (s *Server) GetTramite(ctx context.Context, request oapi.GetTramiteRequestObject) (oapi.GetTramiteResponseObject, error) {
+	panic("unimplemented")
+}
+
+// UpdateTramite implements [oapi.StrictServerInterface].
+func (s *Server) UpdateTramite(ctx context.Context, request oapi.UpdateTramiteRequestObject) (oapi.UpdateTramiteResponseObject, error) {
+	panic("unimplemented")
+}
+
+// DeleteTramite implements [oapi.StrictServerInterface].
+func (s *Server) DeleteTramite(ctx context.Context, request oapi.DeleteTramiteRequestObject) (oapi.DeleteTramiteResponseObject, error) {
+	panic("unimplemented")
 }
 
 func (s *Server) RegisterRoutes(r *chi.Mux) {
